--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 
     <!-- Screen titles -->
     <string name="title_browse_news">News</string>
-    <string name="title_news_details">News details</string>
+    <string name="title_article_details">News details</string>
 
     <!-- Common -->
     <string name="view_empty_message">No matching items</string>
@@ -14,31 +14,29 @@
     <!-- BroArticleNews-->
     <string name="mode_feeds">News feeds</string>
 
-    <string name="news_image_desc">News image</string>
-    <string name="news_poster_desc">News poster</string>
+    <string name="menu_sources">Sources</string>
     <string name="menu_categories">Categories</string>
 
     <string name="favored_empty_message">You have no favored news yet.</string>
     <string name="favored_error_message">Loading failed, please try again.</string>
-    <ArticleNews details -->
-    <string name="news_details_rating">Average rating: %1$s</string>
+    <!-- News details -->
     <string name="menu_refresh">Refresh</string>
 
     <string name="menu_scroll_to_top">Scroll to top</string>
     <string name="menu_about">About</string>
-    <string name="news_item_btn_favorite_desc">Save to favorites</string>
+    <string name="article_item_btn_favorite_desc">Save to favorites</string>
     <string name="title_settings">Settings</string>
     <string name="pref_include_adult_title">Include adult</string>
     <string name="pref_include_adult_description">Toggle the inclusion of adult newss.</string>
     <string name="menu_settings">Settings</string>
-    <string name="news_details_trailer_desc">Play the trailer</string>
-    <string name="news_reviews">Reviews</string>
-    <string name="message_empty_news_fragment">Please, choose a news :)</string>
-    <string name="news_videos">Trailers</string>
+    <string name="article_details_trailer_desc">Play the trailer</string>
+    <string name="article_reviews">Reviews</string>
+    <string name="message_empty_article_fragment">Please, choose a news :)</string>
+    <string name="article_videos">Trailers</string>
     <string name="play_trailer_desc">Play trailer</string>
     <string name="menu_share">Share</string>
     <string name="share_template">Check out \'<xliff:g id="title">%1$s</xliff:g>\' at <xliff:g id="url">%2$s</xliff:g></string>
     <string name="title_share_trailer">Share trailer</string>
-    <string name="message_news_favored">Saved to favorites.</string>
+    <string name="message_article_favored">Saved to favorites.</string>
     <string name="sync_account_type">com.github.gregbiv.news</string>
 </resources>
